# Rust-TypeInformation

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
serde_meta/: Cargo.toml
serde_meta/src/: implementations.rs  lib.rs  serde_ser.rs
serde_meta_derive/: Cargo.toml
serde_meta_derive/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
type_information/: Cargo.toml
type_information/src/: generic_indexed_type_information.rs  implementations.rs  lib.rs  number_indexed_type_information.rs  serde_ser.rs
type_information_derive/: Cargo.toml
type_information_derive/src/: extracted_type_information.rs  lib.rs  type_info_extraction.rs  type_info_to_tokenstream.rs
