[package]
name = "serde-meta"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["serde_ser"]

serde_ser = ["serde"]

[dependencies]
proc-macro2 = { version = "0.4.30" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"