[package]
name = "serde-meta-derive"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde-meta = { path = "../serde_meta"}
syn = { version = "0.15", features = ["derive", "parsing", "printing", "visit", "proc-macro", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true
