[package]
name = "serde-meta-derive"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde-meta = { path = "../serde_meta"}
syn = { version = "~1.0", features = ["derive", "parsing", "printing", "visit", "proc-macro", "extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[dev-dependencies]
syn = { version = "~1.0", features= ["full"]}

[lib]
proc-macro = true
