[package]
name = "tests"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["serde_ser"]

serde_ser = []

[dependencies]
serde-meta = { path = "../serde_meta"}
serde-meta-derive = { path = "../serde_meta_derive" }

[dev-dependencies]
serde_json = "~1.0"
