[package]
name = "tests"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["serde_ser"]

serde_ser = []

[dependencies]
type-information = { path = "../type_information"}
type-information-derive = { path = "../type_information_derive" }

[dev-dependencies]
serde_json = "~1.0"
