[package]
name = "type-information"
version = "0.1.0"
authors = ["Thomas Lahmer <791550+Tomok@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["serde_ser"]

serde_ser = ["serde"]

[dependencies]
proc-macro2 = { version = "~1.0" }
serde = { version = "~1.0", optional = true }

[dev-dependencies]
serde_json = "~1.0"
lazy_static = "^1.4"
