[package]
name = "type-information"
version = "0.1.0"
authors = ["Thomas Lahmer <tlahmer@darewell.de>"]
license = "MIT OR Apache-2.0"
description = "TypeInformation Framework for Rust"
homepage = "https://github.com/Tomok/Rust-TypeInformation"
repository = "https://github.com/Tomok/Rust-TypeInformation"
# documentation = TODO
keywords = ["type-information", "meta", "meta-data"]
categories = ["data-structures"]
readme = "README.md"
edition = "2018"

[features]
default = ["serde_ser"]

serde_ser = ["serde"]

[dependencies]
proc-macro2 = { version = "~1.0" }
serde = { version = "~1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "~1.0"
lazy_static = "^1.4"
