[package]
name = "type-information-derive"
version = "0.1.0"
authors = ["Thomas Lahmer <tlahmer@darewell.de>"]
license = "MIT OR Apache-2.0"
description = "derive(meta) implementation for TypeInformation Framework for Rust"
homepage = "https://github.com/Tomok/Rust-TypeInformation"
repository = "https://github.com/Tomok/Rust-TypeInformation"
# documentation = TODO
keywords = ["type-information", "meta", "meta-data"]
categories = ["data-structures"]
readme = "README.md"
edition = "2018"

[dependencies]
type-information = { path = "../type_information"}
syn = { version = "~1.0", features = ["derive", "parsing", "printing", "visit", "proc-macro", "extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[dev-dependencies]
syn = { version = "~1.0", features= ["full"]}

[lib]
proc-macro = true
